# blog-resources

./: README.md
building-a-wallet/: README.md
building-a-wallet/python/: requirements.txt  step1_fetch_state.py  step2_stream_updates.py  step3_tx_history.py  step4_send_sol.py  step5_send_tokens.py
building-a-wallet/rust/: Cargo.toml
building-a-wallet/rust/src/: step1_fetch_state.rs  step2_stream_updates.rs  step3_tx_history.rs  step4_send_sol.rs  step5_send_tokens.rs
building-a-wallet/typescript/: package.json  step1-fetch-state.ts  step2-stream-updates.ts  step3-tx-history.ts  step4-send-sol.ts  step5-send-tokens.ts
trading-market-making/: README.md
trading-market-making/python/: requirements.txt  step1_dragonmouth.py  step2_deshred.py  step3_priority_fee.py  step4_send_jet.py
trading-market-making/rust/: Cargo.toml
trading-market-making/rust/src/: bench_deshred_vs_normal.rs  reproduce_deshred_latency.rs  step1_dragonmouth.rs  step2_deshred.rs  step3_priority_fee.rs  step4_send_jet.rs  test_all_filters.rs  test_blockmeta.rs
trading-market-making/typescript/: combined.ts  package.json  step1-dragonmouth.ts  step2-deshred.ts  step3-priority-fee.ts  step4-send-jet.ts
